--- a/about.css
+++ b/about.css
@@ -2,6 +2,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.7;
+    overflow-x: hidden;
     color: #2c3e50; 
     background-color: #ecf0f1;
     margin: 0;
@@ -21,6 +22,11 @@ p {
 
 .header-logo {
     background-color: lightblue; 
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .header-logo .logo-img {
@@ -70,6 +76,7 @@ p {
     padding: 60px 20px;
     background-color: #ffffff;
     border-radius: 10px;
+    max-width: 100%;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     margin-top: -40px;
 }
