--- a/about.css
+++ b/about.css
@@ -6,6 +6,7 @@ body {
     color: #2c3e50; 
     background-color: #ecf0f1;
     margin: 0;
+    max-width: 100% !important;
     padding: 0;
 }
 
@@ -172,7 +173,7 @@ footer .row {
 }
 
 footer .container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
