--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,9 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.7;
+    overflow-x: hidden;
     color: #2c3e50; 
+    max-width: 100% !important;
     background-color: #ecf0f1;
     margin: 0;
     padding: 0;
@@ -24,9 +26,14 @@ p {
 }
 
 .header-logo .logo-img {
-    width: 70px;
-    height: 80px;   
+    width: 70%;
+    height: 80%;   
   
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .navbar {
@@ -48,12 +55,13 @@ p {
     padding: 60px 20px;
     background-color: #ffffff;
     border-radius: 10px;
+    max-width: 100%;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     margin-top: -40px;
 }
 
 .contact-section {
-    max-width: 800px;
+    max-width: 80%;
     margin: auto;
     padding: 40px;
     background-color: #fff;
@@ -62,7 +70,7 @@ p {
 }
 
 .modal-content {
-    max-width: 700px;
+    max-width: 70%;
     max-height: fit-content;
     margin: auto;
     margin-top: 150px;
@@ -106,11 +114,12 @@ footer {
 
 footer h5 {
     color: #28d4ff; 
+    font-size: 18px;
     margin-bottom: 20px;
     font-weight: bold;
 }
 hr {
-    width: 600px;
+    width: 100%;
     height: 2px;
     background-color: #10343d;
     margin: 0 auto 20px;
@@ -127,7 +136,7 @@ footer .row {
 }
 
 footer .container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
