--- a/about.css
+++ b/about.css
@@ -1,4 +1,10 @@
 
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
+
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.7;
